--- a/static/404.html
+++ b/static/404.html
@@ -6,11 +6,7 @@
       name="viewport"
       content="width=device-width, initial-scale=1.0, shrink-to-fit=no"
     />
-    <title>Ultraviolet | Error</title>
-    <meta
-      name="description"
-      content="Ultraviolet is a highly sophisticated proxy used for evading internet censorship or accessing websites in a controlled sandbox using the power of service-workers. Unblock sites today!"
-    />
+    <title>Error</title>
     <meta
       name="theme-color"
       media="(prefers-color-scheme: dark)"
@@ -24,7 +20,7 @@
 
   <body>
     <div class="logo-wrapper left-margin">
-      <h1>Ultraviolet | Error</h1>
+      <h1>Error</h1>
     </div>
     <div class="desc left-margin">
       <p>The server could not route your request.</p>
@@ -41,7 +37,7 @@
         style="margin-left: auto"
         >Credits</a
       >
-      <span>Ultraviolet &copy; TN 2022</span>
+      <span>Ultr4violet &copy; TN 2022</span>
     </footer>
     <script src="uv/uv.bundle.js"></script>
     <script src="uv/uv.config.js"></script>
